--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -35,8 +35,8 @@
         </nav>
         <div class="header-logo">
         <a href="index.html">
-            <img class="logo" src="images/IMA logo in white.png" alt="Logo"/> 
-            <h1>IN MEDIA AGENCY</h1>  
+            <img class="logo-big" src="images/IMA logo in white.png" alt="Logo"/> 
+            <h1 class="logo-words">IN MEDIA AGENCY</h1>  
             </a>
         </div>
         <a class="header-book" href="https://www.instagram.com/ima_producer/"><i class="fab fa-instagram"></i></a>
