--- a/musicandaudio.html
+++ b/musicandaudio.html
@@ -35,8 +35,8 @@
         </nav>
         <div class="header-logo">
         <a href="index.html">
-            <img class="logo" src="images/IMA logo in white.png" alt="Logo"/> 
-            <h1>IN MEDIA AGENCY</h1>  
+            <img class="logo-big" src="images/IMA logo in white.png" alt="Logo"/> 
+            <h1 class="logo-words">IN MEDIA AGENCY</h1>  
             </a>
         </div>
         <a class="header-book" href="https://www.instagram.com/ima_producer/"><i class="fab fa-instagram"></i></a>
@@ -63,10 +63,10 @@
                 <h3>Our professional musicians and audio engineers will work with you to develop music or mix tracks.</h3>
             </div>
             <div class="content">
-                <video src="images/Incense Final.mp4" controls autoplay muted loop></video>
-                <video src="images/My Heavenly Father Watches Over Me Final v2.mp4" controls autoplay muted loop></video>
-                <video src="images/Silent Night Final.mp4" controls autoplay muted loop></video>
-                <video src="images/Go Tell It On The Mountain Final.mp4" controls autoplay muted loop></video>
+                <iframe height="350" src="https://www.youtube.com/embed/6CVfEPMk16Q?si=8hXSHvjyBwFb4MBc&autoplay=1&mute=1&loop=1&playlist=6CVfEPMk16Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe height="350" src="https://www.youtube.com/embed/v7dbXWnMuac?si=cqGRxgZolNZr-x-P&autoplay=1&mute=1&loop=1&playlist=v7dbXWnMuac" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe height="350" src="https://www.youtube.com/embed/miTZ6d_95Lw?si=Aoh1ZorVuu5ZQS-A&autoplay=1&mute=1&loop=1&playlist=miTZ6d_95Lw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe height="350" src="https://www.youtube.com/embed/3-LttsgFQ9Y?si=oICTUeNk6BT68D3A&autoplay=1&mute=1&loop=1&playlist=3-LttsgFQ9Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
     </div>
@@ -112,8 +112,9 @@
             box-sizing: border-box;
             overflow: hidden;
         }
-        .content video, .content img {
+        .content iframe, .content img {
             object-fit: cover; 
+            margin-right: 20px;
             width: 100%;
             max-width: 600px;
         }
@@ -148,7 +149,7 @@
                 grid-template-columns: 1fr;
             }
 
-            .content video, .content img {
+            .content iframe, .content img {
                 margin-right: 3px; 
                 margin-bottom: 20px; 
                 max-width: 100%;
@@ -164,6 +165,16 @@
                 font-size: 3vh;
             margin:20px;
         
+            }
+        }
+        @media(max-width: 800px) {
+            .content iframe {
+                height: 300px;
+            }
+        }
+        @media(max-width: 550px) {
+            .content iframe {
+                height: 200px;
             }
         }
     </style>
