--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -60,7 +60,7 @@
             <div class="content">
                 <img src="images/OCM 1000 poster 6.4_CL.png">
                 <div class="text">
-                    <h3>Pamphlets/Brochures/Posters/Banners/eBlasts</h3>
+                    <h3>Pamphlets / Brochures / Posters / Banners / eBlasts</h3>
                     <br>
                     <h3>Carefully designed for easy reading and quick understanding. The bright colors and clean design captivate the viewer's attention. A picture is worth a thousand words. Make a memorable impression.</h3>
                 </div>
@@ -179,6 +179,16 @@
             }
             .text h3{
             font-size: 3vh;
+            }
+        }
+        @media(max-width: 600px) {
+        .graphicdesign h1, .graphicdesign h2{
+            margin-left: 0;
+            margin-right: 0;
+        }
+        #background{
+                margin-left: 0px;
+                margin-right: 0px;
             }
         }
     </style>
