--- a/musicandaudio.html
+++ b/musicandaudio.html
@@ -169,12 +169,22 @@
         }
         @media(max-width: 800px) {
             .content iframe {
-                height: 300px;
+                height: 350px;
             }
         }
         @media(max-width: 550px) {
             .content iframe {
-                height: 200px;
+                height: 250px;
+            }
+        }
+        @media(max-width: 600px) {
+        .musicandaudio h1, .musicandaudio h2{
+            margin-left: 0;
+            margin-right: 0;
+        }
+        #background{
+                margin-left: 0px;
+                margin-right: 0px;
             }
         }
     </style>
