--- a/videoproduction.html
+++ b/videoproduction.html
@@ -220,14 +220,24 @@
         }
         @media(max-width: 800px) {
             .content iframe {
-                height: 300px;
+                height: 350px;
             }
         }
         @media(max-width: 550px) {
             .content iframe {
-                height: 200px;
+                height: 250px;
             }
         }
+        @media(max-width: 600px) {
+    .videoproduction h1, .videoproduction h2{
+        margin-left: 0;
+        margin-right: 0;
+    }
+    #background{
+            margin-left: 0px;
+            margin-right: 0px;
+        }
+    }
        
     </style>
 </body>
