--- a/animatedpresentations.html
+++ b/animatedpresentations.html
@@ -250,8 +250,29 @@
                 padding-top: 0;
             }
         }
+        @media(max-width: 700px) {
+            .content iframe, .latest iframe {
+                height: 300px;
+                margin-bottom: 10px;
+                padding-top: 0;
+            }
+        }
+        @media(max-width: 600px) {
+            .content iframe, .latest iframe {
+                height: 250px;
+                margin-bottom: 10px;
+                padding-top: 0;
+            }
+        }
+        @media(max-width: 500px) {
+            .content iframe, .latest iframe {
+                height: 220px;
+                margin-bottom: 10px;
+                padding-top: 0;
+            }
+        }
         
-        @media(max-width: 550px) {
+        @media(max-width: 350px) {
             .content iframe, .latest iframe {
                 height: 175px;
                 margin-bottom: 10px;
