--- a/musicandaudio.html
+++ b/musicandaudio.html
@@ -199,6 +199,7 @@
 
     .content iframe {
         height: 220px; /* Adjust height for smaller screens */
+        margin-right: 10px;
     }
         }
         
@@ -210,7 +211,7 @@
     }
             .content iframe, .latest iframe {
                 height: 175px;
-          
+                margin-right: 10px;
                 padding-top: 0;
             }
         }
