--- a/musicandaudio.html
+++ b/musicandaudio.html
@@ -63,10 +63,10 @@
                 <h3>Our professional musicians and audio engineers will work with you to develop music or mix tracks.</h3>
             </div>
             <div class="content">
-                <iframe height="350" src="https://player.vimeo.com/video/1061483646?h=feb062da57&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&autoplay=1&mute=0&loop=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media"  title="Incense"></iframe>
-                <iframe height="350" src="https://player.vimeo.com/video/1061484765?h=eea0284709&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&autoplay=1&mute=0&loop=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media"  title="My Heavenly Father Watches Over Me"></iframe>
-                <iframe height="350" src="https://player.vimeo.com/video/1061483683?h=d3a4276785&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&autoplay=1&mute=0&loop=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media"  title="Silent Night-2"></iframe>
-                <iframe height="350" src="https://player.vimeo.com/video/1061480293?h=6b40099949&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&autoplay=1&mute=0&loop=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media"  title="Joy to the World"></iframe>
+                <iframe height="350" src="https://player.vimeo.com/video/1061483646?h=feb062da57&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&muted=1&autoplay=1&loop=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media"  title="Incense"></iframe>
+                <iframe height="350" src="https://player.vimeo.com/video/1061484765?h=eea0284709&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&muted=1&autoplay=1&loop=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media"  title="My Heavenly Father Watches Over Me"></iframe>
+                <iframe height="350" src="https://player.vimeo.com/video/1061483683?h=d3a4276785&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&muted=1&autoplay=1&loop=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media"  title="Silent Night-2"></iframe>
+                <iframe height="350" src="https://player.vimeo.com/video/1061480293?h=6b40099949&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&muted=1&autoplay=1&loop=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media"  title="Joy to the World"></iframe>
             </div>
         </div>
     </div>
