--- a/videoproduction.html
+++ b/videoproduction.html
@@ -194,6 +194,7 @@
             .content {
                 flex-direction: column; 
                 align-items: center; 
+                margin-right: 3px;
             }
 
             .content iframe, .content img {
