--- a/animatedpresentations.html
+++ b/animatedpresentations.html
@@ -223,6 +223,7 @@
             .content {
                 flex-direction: column; 
                 align-items: center; 
+                margin-right: 3px;
             }
 
             .content iframe, .content img {
