--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -165,6 +165,7 @@
             .content {
                 flex-direction: column; 
                 align-items: center; 
+                margin-right: 3px;
             }
 
             .content img {
